# nmrndr

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  ci-build.Dockerfile  vcpkg.json
.gitlab/ci/: analyze.yml  build.Dockerfile  build.yml  ci-image-build.yml  post-test.yml  test.yml
.gitlab/issue_templates/: Bug.md  Default.md
Source/App/: CMakeLists.txt
Source/App/Private/: Main.cpp  PaperWorld.cpp  Projectile.cpp  World.cpp
Source/App/Private/NMApp/: Application.cpp
Source/App/Public/: Environment.hpp  PaperWorld.hpp  Projectile.hpp  World.hpp
Source/App/Public/NMApp/: Application.hpp
Source/Core/: CMakeLists.txt
Source/Core/Private/: Canvas.cpp  Color.cpp  Math.cpp  Point.cpp  Vector.cpp
Source/Core/Private/NMCore/: Application.cpp  Canvas.cpp
Source/Core/Private/NMCore/Pattern/: PatternBase.cpp
Source/Core/Public/: Camera.hpp  Canvas.hpp  Color.hpp  Material.hpp  Math.hpp  Matrix.hpp  Point.hpp  Tuple.hpp  Vector.hpp  World.hpp
Source/Core/Public/Light/: Point.hpp
Source/Core/Public/NMCore/: Application.hpp  Camera.hpp  Canvas.hpp  Color.hpp  Material.hpp  ThreadPool.hpp  World.hpp
Source/Core/Public/NMCore/Light/: Point.hpp
Source/Core/Public/NMCore/Pattern/: Checker.hpp  Gradient.hpp  Pattern.hpp  PatternBase.hpp  Ring.hpp  Stripe.hpp
Source/Core/Public/NMCore/Primitive/: Plane.hpp  PrimitiveBase.hpp  Sphere.hpp
Source/Core/Public/NMCore/RT/: Intersection.hpp  IntersectionList.hpp  IntersectionState.hpp  Ray.hpp
Source/Core/Public/Primitive/: Plane.hpp  PrimitiveBase.hpp  Sphere.hpp
Source/Core/Public/RT/: IIntersectionObject.hpp  Intersection.hpp  IntersectionList.hpp  IntersectionState.hpp  Ray.hpp
Source/Examples/: CMakeLists.txt
Source/Examples/0_Trajectory/Private/: Main.cpp  World.cpp
Source/Examples/0_Trajectory/Public/: PaperWorld.hpp
Source/Examples/1_RotMatClock/Private/: Main.cpp
Source/Examples/2_ShadowSphere/Public/: World.hpp
Source/Examples/3_RenderSphere/Private/: Main.cpp
Source/Examples/3_RenderSphere/Public/: World.hpp
Source/Examples/4_FirstScene/: CMakeLists.txt
Source/Examples/4_FirstScene/Private/: Main.cpp
Source/Examples/5_PlaneScene/: CMakeLists.txt
Source/Examples/5_PlaneScene/Private/: Main.cpp
Source/Examples/RenderSphere/: CMakeLists.txt
Source/Examples/RenderSphere/Private/: Main.cpp
Source/Examples/RenderSphere/Public/: World.hpp
Source/Examples/RotMatClock/: CMakeLists.txt
Source/Examples/RotMatClock/Private/: Main.cpp
Source/Examples/ShadowSphere/: CMakeLists.txt
Source/Examples/ShadowSphere/Private/: Main.cpp
Source/Examples/ShadowSphere/Public/: World.hpp
Source/Examples/Trajectory/: CMakeLists.txt
Source/Examples/Trajectory/Public/: Projectile.hpp
Source/Math/Private/NMM/: Vector.cpp
Source/Math/Public/NMM/: Matrix.hpp  Point.hpp  Util.hpp  Vector.hpp
Source/NMM/: CMakeLists.txt
Source/NMM/Private/NMM/: Vector.cpp
Source/NMM/Public/NMM/: Matrix.hpp  Tuple.hpp  Util.hpp
Source/Pax/: CMakeLists.txt
Source/Render/: CMakeLists.txt
Source/Render/Private/NMRender/: Application.cpp
Source/RotMatClockExample/: CMakeLists.txt
Source/SDLApp/: CMakeLists.txt
Source/SDLApp/Private/: Main.cpp  TestApplication.cpp
Source/SDLApp/Public/: TestApplication.hpp
Source/Tools/: CMakeLists.txt
Source/Tools/AssMan/: CMakeLists.txt
Source/Tools/PaxBuild/: CMakeLists.txt
Source/TrajectoryExample/: CMakeLists.txt
Test/: CMakeLists.txt
Test/UnitCore/: CMakeLists.txt
Test/UnitCore/Private/: CameraTest.cpp  CanvasTest.cpp  ColorTest.cpp  MaterialTest.cpp  WorldTest.cpp
Test/UnitCore/Private/Light/: PointTest.cpp
Test/UnitCore/Private/Pattern/: CheckerTest.cpp  GradientTest.cpp  PatternBaseTest.cpp  RingTest.cpp  StripeTest.cpp
Test/UnitCore/Private/Primitive/: PlaneTest.cpp  PrimitiveBaseTest.cpp  SphereTest.cpp
Test/UnitCore/Private/RT/: IIntersectionObjectTest.cpp  IntersectionListTest.cpp  IntersectionStateTest.cpp  IntersectionTest.cpp  RayTest.cpp
Test/UnitNMM/: CMakeLists.txt
Test/UnitNMM/Private/: MatrixTest.cpp  PointTest.cpp  TupleTest.cpp  UtilTest.cpp  VectorTest.cpp
Tests/: CMakeLists.txt
Tests/UnitApp/: CMakeLists.txt
Tests/UnitApp/Private/: ExampleTest.cpp
Tests/UnitApp/Public/: ExampleTest.hpp
Tests/UnitCore/: CMakeLists.txt
Tests/UnitCore/Private/: CanvasTest.cpp  ColorTest.cpp  MathTest.cpp  MatrixTest.cpp  PointTest.cpp  TupleTest.cpp  VectorTest.cpp
Tests/UnitCore/Public/: CanvasTest.hpp  ColorTest.hpp  MathTest.hpp  MatrixTest.hpp  PointTest.hpp  TupleTest.hpp  VectorTest.hpp
Tools/: CMakeLists.txt
Tools/cmake/: Builder.cmake  ClangFormat.cmake  ClangTools.cmake  CppCheck.cmake  Git.cmake
Tools/scripts/: merge_lcov.sh
